# Simple-Shell

./: CMakeLists.txt  README.md
include/: tools.h
src/: main.c  tools.c
